# acapy-endorser-service

./: README.md  SECURITY.md  pyproject.toml  test_token_flow.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_release.yaml  e2e-tests.yml  lint.yml  pr-tests.yml
bdd-tests/: Dockerfile.bdd  requirements.txt
bdd-tests/features/: witness-requests.feature
bdd-tests/features/steps/: author-connections.py  author-dids.py  util.py  witness-requests.py
docker/: docker-compose.controller.yml  docker-compose.yml  manage
docker/acapy/: Dockerfile.acapy  ngrok-wait.sh
endorser/: Dockerfile.endorser  tox.ini
endorser/api/: acapy_utils.py  config.py  endorser_main.py  main.py
endorser/api/core/: config.py
endorser/api/db/: errors.py  session.py
endorser/api/db/migrations/: env.py
endorser/api/db/migrations/versions/: add_witness_request_table__z92seb39481z.py  added_details_field_for_the_allow__9a8ef028a751.py  initial_db_tables_d925cb39480e.py  make_connection_id_unique_f4e857e3d8eb.py  rename_author_did_to_creddef_author_did__b1e41d72f00e.py  updated_to_support_granular__fb66f2d55aee.py
endorser/api/db/models/: __init__.py  allow.py  base.py  configuration.py  contact.py  endorse_request.py  witness_request.py
endorser/api/endpoints/dependencies/: db.py  jwt_security.py
endorser/api/endpoints/models/: allow.py  configurations.py  connections.py  endorse.py  witness.py
endorser/api/endpoints/routes/: admin.py  allow.py  auth.py  connections.py  endorse.py  endorser_admin.py  endorser_api.py  reports.py  webhooks.py
endorser/api/services/: __init__.py  admin.py  allow_lists.py  auto_state_handlers.py  configurations.py  connections.py  endorse.py  webhook_handlers.py  witness.py
endorser/tests/: conftest.py  test_allow_lists.py  test_allow_models.py  test_allow_utils.py  test_auth.py  test_auto_state_handlers.py  test_routes_allow.py  test_services_configurations.py
