[tool.poetry]
name = "acapy_endorser_service"
version = "1.1.3"
description = "ACA-Py Endorser Service is a controller for a Python Cloud Agent acting as endorser."
authors = ["OpenWallet Foundation"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "endorser"}]
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: Apache Software License",
	        "Operating System :: OS Independent",
]
repository = "https://github.com/openwallet-foundation/acapy-endorser-service"
package-mode = false


[tool.poetry.dependencies]
python = "^3.14"
aiohttp = "^3.14.1"
alembic = "^1.18.5"
asyncpg = "^0.31.0"
fastapi = {version = "^0.138.0", extras = ["standard"]}
psycopg2-binary = "^2.9.12"
pydantic-settings = "^2.14.2"
python-jose = {version = "^3.5.0", extras = ["cryptography"]}
requests = "^2.34.2"
SQLAlchemy = {version = "^2.0.51", extras = ["asyncio"]}
sqlmodel = "^0.0.39"
starlette-context = "^0.5.1"

# Transitive dependency overrides to resolve known vulnerabilities
cryptography = "^49.0.0"
ecdsa = "^0.19.2"
pyasn1 = "^0.6.3"
pygments = "^2.20.0"
python-multipart = "^0.0.32"
starlette = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
ruff = "^0.15.20"

# testing
behave = "^1.3.3"
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
pytest-ruff = "^0.5"


[tool.poetry.extras]


[tool.poetry.scripts]
aca-py = "endorser.main:main"

[tool.ruff]
lint.select = ["B006", "C", "D", "E", "F"]

lint.ignore = [
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    "D417", # Missing argument descriptions in the docstring
    "C901", # Function is too complex
]

include = ["endorser/**/*.py"]

line-length = 90

exclude = ["migrations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["B006", "D", "E501", "F841"]

[tool.pytest.ini_options]
testpaths = "endorser"
addopts = """
    --quiet --junitxml=./test-reports/junit.xml
    --cov-config .coveragerc --cov=endorser --cov-report term --cov-report xml
    --ruff
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning', # Ignore specific DeprecationWarning for old packages using distutils version class
]

[tool.coverage.run]

omit = [
    "*/tests/*",
    "demo/*",
    "docker/*",
    "docs/*",
    "scripts/*",
]
data_file = "test-reports/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
